cmake_minimum_required(VERSION 3.15)
project(VAA)

set(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS -pthread)
include_directories(src/include)
add_executable(networkNode
        src/Graph/edge.hpp
        src/Messages/IMessage.hpp
        src/Messages/message.hpp
        src/Messages/accountMessage.hpp
        src/Messages/echoMessage.hpp
        src/Messages/orderedBlockedMessage.hpp
        src/Handler/fileHandler.hpp
        src/Handler/messageHandler.hpp
        src/Handler/echoHandler.hpp
        src/Application/doubleCounting.hpp
        src/networkApp.hpp
        src/Graph/node.hpp
        src/Handler/accountHandler.hpp
        src/Handler/goldmanEdgeChasingHandler.hpp
        src/Application/agreement.hpp
        src/Handler/configHandler.hpp
        src/Handler/configHandler.cpp
        src/Graph/edge.cpp
        src/Handler/fileHandler.cpp
        src/Messages/message.cpp
        src/Messages/accountMessage.cpp
        src/Messages/echoMessage.cpp
        src/Messages/orderedBlockedMessage.cpp
        src/Handler/echoHandler.cpp
        src/Handler/accountHandler.cpp
        src/Application/doubleCounting.cpp
        src/Handler/goldmanEdgeChasingHandler.cpp
        src/Application/agreement.cpp
        src/Handler/messageHandler.cpp
        src/networkApp.cpp
        src/Graph/node.cpp)

add_executable(nodeApp
        src/Handler/configHandler.hpp
        src/Graph/edge.hpp
        src/Messages/IMessage.hpp
        src/Messages/message.hpp
        src/Messages/accountMessage.hpp
        src/Messages/echoMessage.hpp
        src/Messages/orderedBlockedMessage.hpp
        src/Handler/fileHandler.hpp
        src/Application/agreement.hpp
        src/Handler/messageHandler.hpp
        src/Handler/echoHandler.hpp
        src/Handler/accountHandler.hpp
        src/Handler/goldmanEdgeChasingHandler.hpp
        src/Application/doubleCounting.hpp
        src/Graph/node.hpp
        src/Handler/configHandler.cpp
        src/Graph/edge.cpp
        src/Messages/message.cpp
        src/Messages/accountMessage.cpp
        src/Messages/echoMessage.cpp
        src/Messages/orderedBlockedMessage.cpp
        src/Handler/fileHandler.cpp
        src/Handler/messageHandler.cpp
        src/Handler/accountHandler.cpp
        src/Handler/echoHandler.cpp
        src/Handler/goldmanEdgeChasingHandler.cpp
        src/Application/doubleCounting.cpp
        src/Application/agreement.cpp
        src/Graph/node.cpp
        src/nodeApp.cpp)

add_executable(graphGenApp
        src/Graph/edge.hpp
        src/Graph/node.hpp
        src/Messages/IMessage.hpp
        src/Messages/message.hpp
        src/Messages/accountMessage.hpp
        src/Messages/echoMessage.hpp
        src/Messages/orderedBlockedMessage.hpp
        src/Handler/fileHandler.hpp
        src/Handler/messageHandler.hpp
        src/Handler/echoHandler.hpp
        src/Handler/accountHandler.hpp
        src/Handler/goldmanEdgeChasingHandler.hpp
        src/Handler/configHandler.hpp
        src/Application/doubleCounting.hpp
        src/Application/agreement.hpp
        src/Handler/configHandler.cpp
        src/Graph/edge.cpp
        src/Messages/message.cpp
        src/Messages/accountMessage.cpp
        src/Messages/echoMessage.cpp
        src/Messages/orderedBlockedMessage.cpp
        src/Handler/goldmanEdgeChasingHandler.cpp
        src/Application/agreement.cpp
        src/Graph/node.cpp
        src/Handler/fileHandler.cpp
        src/graphGenApp.cpp
        src/Handler/echoHandler.cpp
        src/Handler/accountHandler.cpp
        src/Application/doubleCounting.cpp
        src/Handler/messageHandler.cpp)

install( TARGETS nodeApp graphGenApp)